<resources>
    <string name="app_name">Kernel Hacker</string>

    <string name="restart">Restart</string>

    <string name="title_info">Information</string>
    <string name="title_common">General</string>
    <string name="title_features">Features</string>
    <string name="title_misc">Misc</string>

    <string name="info_t2w_effective_range">X:%1$s-%2$s Y:%3$s-%4$s</string>
    <string name="dialog_msg_t2w_effective_range">Save effective range?</string>
    <string name="dialog_initialization_title">Initialization</string>
    <string name="dialog_getting_root_failed_title">Applications can not be used</string>
    <string name="dialog_getting_root_failed_msg">Unable to get ROOT permission</string>
    <string name="notifition_boot_no_shutdown_title">Abnormal shutdown, have not set on boot</string>
    <string name="notifition_boot_kernel_changed_title">Kernel version changed, have not set on boot</string>
    <string name="notifition_boot_setting_failed_title">Failed when setting on boot</string>
    <string name="notifition_boot_setting_failed_text">Click to open the application</string>
    <string name="re_boot_set_title">Use original settings?</string>
    <string name="re_boot_set_content">May lead to instability.</string>
    <string name="info_cpu_time_in_state">CPU Time In State</string>
    <string name="info_kernel_version">Kernel Version</string>
    <string name="info_kernel_version_unable">Unable To Get Kernel Version</string>
    <string name="info_device_state">Device State</string>
    <string name="info_device_state_cpu_freq">Cpu Frequency: </string>
    <string name="info_device_state_cpu_temp">Cpu Temp: </string>
    <string name="info_device_state_batery_temp">Batery Temp: </string>
    <string name="common_zram_title">ZRAM</string>
    <string name="common_zram_summary">Reverse some of you device RAM as compressed swap space</string>
    <string name="common_zram_disksize_title">ZRAM Disk Size</string>
    <string name="common_zram_disksize_summary">Current Disk Size: %1$sMB</string>
    <string name="common_zram_disable_hint">ZRAM may not be disabled right now, it will be disabled on next boot.</string>
    <string name="common_cpu_title">CPU</string>
    <string name="common_cpu_min_title">CPU Min Frequency</string>
    <string name="common_cpu_min_summary">Current Min Frequency: %1$sMHz</string>
    <string name="common_cpu_max_title">CPU Max Frequency</string>
    <string name="common_cpu_max_summary">Current Max Frequency: %1$sMHz</string>
    <string name="common_cpu_gov_title">CPU Governor</string>
    <string name="common_cpu_gov_summary">Current Governor: %1$s</string>
    <string name="common_cpu_lock_title">Lock Frequency</string>
    <string name="common_cpu_lock_summary">Prevent frequency from being changed by other apps.</string>
    <string name="common_zram_swappiness_title">Swappiness</string>
    <string name="common_zram_swappiness_summary">The positive degree of using swap &amp; zram blocks. Current: %1$s</string>
    <string name="common_io_title">IO</string>
    <string name="common_pref_io_read_ahead_size_title">Read Ahead Size</string>
    <string name="common_pref_io_read_ahead_size_summary">Current size: %1$skb</string>
    <string name="common_io_scheduler_title">IO Scheduler</string>
    <string name="common_io_scheduler_summary">Current IO scheduler: %1$s</string>
    <string name="feature_t2w_title">Touch To Wake</string>
    <string name="feature_t2w_prevent_sleep_title">Prevent Sleep</string>
    <string name="feature_t2w_s2w_title">Sweep To Wake</string>
    <string name="feature_dt2w_title">Double Tap To Wake</string>
    <string name="feature_t2w_auto_title">Anti False Touch</string>
    <string name="feature_t2w_auto_summury">Turn off tap to wake when proximity sensor activated</string>
    <string name="feature_t2w_interval_title">Interval Time</string>
    <string name="feature_t2w_effective_range_title">Effective Range</string>
    <string name="feature_t2w_interval_summury">Interval time between two taps: %1$s ms</string>
    <string name="feature_fast_chgarge_title">Fast Chgarge</string>
    <string name="dialog_t2w_lack_file_title">Notice!!!</string>
    <string name="dialog_t2w_lack_file_msg">You device support tap to wake, but lack some system file to enable it, tap Accept to fix the problem.</string>

    <string name="misc_set_on_boot_title">Set On Boot</string>
    <string name="misc_about_title">About</string>
    <string name="misc_about_text">This application is written by ztc1997.\nThanks to Takayama Aren &amp; Hello-大白.\nUsed multiple open source project.</string>
    <string name="feature_shake2wake_title">Shake To Wake</string>
    
    <string name="dailog_excption_title">Exception Occurs</string>
    <string name="dailog_excption_msg">Sorry, some exceptions occur cause the application unable to work. You can tap Accept to send the exceptions message to developer to help them fix the exceptions</string>

</resources>
