<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:divider="?android:attr/listDivider"
        android:showDividers="middle">
    
        <TextView
            style="@style/CardTitleTextView"
            android:text="@string/common_io_title"/>

        <com.ztc1997.kernelhacker.view.PreferenceListView
            android:id="@+id/io_scheduler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:pv_title="@string/common_io_scheduler_title"
            app:pv_summary="@string/common_io_scheduler_summary"
            app:pv_key="pref_io_scheduler"/>

        <com.ztc1997.kernelhacker.view.PreferenceEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/io_read_ahead_size"
            app:pv_key="pref_io_read_ahead_size"
            app:pv_title="@string/common_pref_io_read_ahead_size_title"
            app:pv_summary="@string/common_pref_io_read_ahead_size_summary"
            app:petv_minValue="128"
            app:petv_maxValue="4096"
            app:petv_interval="128"/>
    
    </LinearLayout>

</android.support.v7.widget.CardView>