<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:divider="?android:attr/listDivider"
        android:showDividers="middle">
    
        <TextView
            style="@style/CardTitleTextView"
            android:text="@string/feature_t2w_title"/>
        
        <com.ztc1997.kernelhacker.view.PreferenceSwitchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t2w_switch"
            app:pv_title="@string/feature_t2w_title"
            app:pv_key="pref_t2w"/>

        <com.ztc1997.kernelhacker.view.PreferenceSwitchView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t2w_auto_switch"
            app:pv_title="@string/feature_t2w_auto_title"
            app:pv_summary="@string/feature_t2w_auto_summury"
            app:pv_key="pref_t2w_auto"
            app:pv_dependency="pref_t2w"/>
        
        <com.ztc1997.kernelhacker.view.PreferenceEditTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t2w_interval"
            app:pv_title="@string/feature_t2w_interval_title"
            app:pv_summary="@string/feature_t2w_interval_summury"
            app:pv_key="pref_t2w_interval"
            app:pv_dependency="pref_t2w"/>
        
        <com.ztc1997.kernelhacker.view.PreferenceView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/t2w_effective_range"
            app:pv_title="@string/feature_t2w_effective_range_title"
            app:pv_dependency="pref_t2w"/>
    
    </LinearLayout>
</android.support.v7.widget.CardView>