<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <TextView
            style="@style/CardTitleTextView"
            android:text="@string/info_device_state"/>

        <com.ztc1997.kernelhacker.viwe.InfoProgressBar
            android:id="@+id/info_cpu_freq"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:unit="MHz"
            app:name="@string/info_device_state_cpu_freq"/>
        
        <com.ztc1997.kernelhacker.viwe.InfoProgressBar
            android:id="@+id/info_cpu_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:unit="℃"
            app:name="@string/info_device_state_cpu_temp"/>

        <com.ztc1997.kernelhacker.viwe.InfoProgressBar
            android:id="@+id/info_battery_temp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            app:unit="℃"
            app:name="@string/info_device_state_batery_temp"/>
        
    </LinearLayout>

</android.support.v7.widget.CardView>